--- a/static/style.css
+++ b/static/style.css
@@ -31,7 +31,7 @@ form {
   background: tan;
 }
 
-input {
+input, select {
   margin: 5px;
   border: 3px solid black;
 }
@@ -45,6 +45,12 @@ section {
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+section.patient {
+  align-items: flex-end;
+  background-color: white;
+  display: flex;
 }
 
 form.register {
