Added register.js for patient info window
If the role is changed to 'patient', extra forms appear,
if the role is changed off of 'patient', the extra forms disappear

--- a/static/style.css
+++ b/static/style.css
@@ -50,7 +50,7 @@ section {
 section.patient {
   align-items: flex-end;
   background-color: white;
-  display: flex;
+  display: none;
 }
 
 form.register {
