Create the approve.php file so that supervisor and admin can approve new users.
Updated the login so that link will be in section.

Updated styles.css to have table styles that align with theme.

--- a/static/style.css
+++ b/static/style.css
@@ -47,6 +47,20 @@ section {
   flex-direction: column;
 }
 
+table {
+  color: black;
+  background-color: tan;
+}
+
+tr {
+  background-color: white;
+}
+
+td, th {
+  padding: 5px;
+  border: 1px solid black;
+}
+
 form.register {
   align-items: flex-end;
   display: flex;
