Created the docappt.php file which supervisor and admin can access to assign doctor appointments.
Updated style.css for minor style fixs on docappt.php page. 

Updated adminHome.php and supervisorHome.php to have link to docappt.php 
file.

--- a/static/style.css
+++ b/static/style.css
@@ -37,6 +37,10 @@ input, select {
   border: 3px solid black;
 }
 
+.display_only {
+  color: white;
+}
+
 input[type="submit"] {
   width: 100%;
 }
