Added success message style to style.css
Updated teh docapp.php to echo contents into second form then insert 
data into the appointments table to make a new appointment.

--- a/static/style.css
+++ b/static/style.css
@@ -82,3 +82,9 @@ section.patient {
   font-weight: bold;
   text-align: center;
 }
+
+.success {
+  color: green;
+  font-weight: bolder;
+  text-align: center;
+}
