CSS edits, fixed date input, and added some more checks for successful queries

--- a/static/style.css
+++ b/static/style.css
@@ -73,6 +73,15 @@ section.patient {
   display: none;
 }
 
+div.info {
+  background-color: white;
+  border: 5px solid tan;
+  color: black;
+  margin-top: 1rem;
+  padding: 1rem;
+  width: 15rem;
+}
+
 .error {
   color: red;
   font-weight: bold;
