Updated styles so that links in the table will be able to be seen.
Updated doctorHome.php to have place holder links for 
patient_of_doctor.php so to be file.

--- a/static/style.css
+++ b/static/style.css
@@ -23,6 +23,15 @@ a:hover {
   color: purple;
 }
 
+.table_link {
+  color:black;
+  text-decoration: underline;
+}
+
+.table_link:hover {
+  color: green;f
+}
+
 form {
   align-items: flex-end;
   display: flex;
