Moved caretaker group code above POST request handler
Also reformatted sql queries and centered the success message in the form

--- a/static/style.css
+++ b/static/style.css
@@ -32,6 +32,10 @@ form {
   background: tan;
 }
 
+form.manageSchedules {
+  align-items: center;
+}
+
 input, select {
   margin: 5px;
   border: 3px solid black;
