Created payment.php so admin can update and add to payments of patients.
Updated adminHome.php to have a link to paytment.php

Added seperation styles to hr and cancel button.

--- a/static/style.css
+++ b/static/style.css
@@ -58,6 +58,10 @@ input[type="submit"] {
   width: 100%;
 }
 
+#cancel {
+  margin-bottom: 1rem;
+}
+
 label {
   color: black;
   font-weight: bold;
